# katagocoreml-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  katagocoreml.pc.in
.github/workflows/: ci.yml
include/katagocoreml/: KataGoConverter.hpp  Options.hpp  Version.hpp.in
scripts/: vendor_dependencies.sh
src/: Converter.cpp
src/builder/: MILBuilder.cpp  MILBuilder.hpp  Operations.cpp  Operations.hpp
src/parser/: KataGoParser.cpp  KataGoParser.hpp
src/serializer/: CoreMLSerializer.cpp  CoreMLSerializer.hpp  WeightSerializer.cpp  WeightSerializer.hpp
src/types/: KataGoTypes.hpp
tests/: BatchSizeTests.cpp  ParserTests.cpp  TypesTests.cpp  conftest.py  test_cpp_vs_python.py  verify_output_error.py
tests/models/: README.md
tools/: katago2coreml.cpp
